--- a/templates/ExamZone.html
+++ b/templates/ExamZone.html
@@ -58,6 +58,14 @@
             h2{
 
             }
+            .small{
+            display: block;
+            margin-right:20px;
+            font-size:8px;
+            text-align:center;
+            margin-top:1%;
+            font-family: sans-serif;
+        }
         </style>
     </head>
     <body style="background-color:lightsteelblue;backface-visibility: 5%;">
@@ -88,5 +96,6 @@
             </table>
             <h5 style="color: red;font-family:sans-serif;margin-top:5% ;">Please select an option</select></h5>
         </div>
+            <small class="small">A Siddhant shah productions<br>Done is better than perfect</small>
     </body>
 </html>
