--- a/templates/index.html
+++ b/templates/index.html
@@ -66,9 +66,18 @@
         form>div>a:hover{
             text-decoration:underline;
         }
+        .small{
+            display: block;
+            margin-right:25px;
+            font-size:8px;
+            text-align:center;
+            margin-top:41%;
+            font-family: sans-serif;
+        }
         </style>
     </head>
     <body>
+
         <header class="top">
              <span style="position:relative;top:10px;left:10px"><b>ExamSoft</b><prep>&nbsp;&nbsp; Rizvi College</span>
         </header>
@@ -99,6 +108,91 @@
                     <option value="Combinatorics and Graph Theory">
                     <option value="Physical Computing and IoT Programming">
                     <option value="Web Programming">
+
+          <option value="imperative Programming">Imperative Programming</option>
+          <option value="digital Electronics">Digital Electronics</option>
+          <option value="operating Systems">Operating Systems</option>
+          <option value="discrete Mathematics">Discrete Mathematics</option>
+          <option value="communication Skills">Communication Skills</option>
+          <option value="object oriented Programming">Object oriented Programming</option>
+          <option value="microprocessor Architecture">Microprocessor Architecture</option>
+          <option value="web Programming">Web Programming</option>
+          <option value="numerical and Statistical Methods">Numerical and Statistical Methods</option>
+          <option value="green Computing">Green Computing</option>
+          <option value="python Programming">Python Programming</option>
+          <option value="data Structures">Data Structures</option>
+          <option value="computer Networks">Computer Networks</option>
+          <option value="database Management Systems">Database Management Systems</option>
+          <option value="applied Mathematics">Applied Mathematics</option>
+          <option value="core Java">Core Java</option>
+          <option value="introduction to Embedded Systems">Introduction to Embedded Systems</option>
+          <option value="computer Oriented Statistical Techniques">Computer Oriented Statistical Techniques</option>
+          <option value="software Engineering">Software Engineering</option>
+          <option value="computer Graphics and Animation">Computer Graphics and Animation</option>
+          <option value="software Project Management">Software Project Management</option>
+          <option value="Internet of Things">Internet of Things</option>
+          <option value="Advanced Web Programming">Advanced Web Programming</option>
+          <option value="Artificial Intelligence">Artificial Intelligence</option>
+          <option value="Linux System Administration">Linux System Administration</option>
+          <option value="Enterprise Java Next Generation Technologies">Enterprise Java Next Generation Technologies</option>
+          <option value="Software Quality Assurance">Software Quality Assurance</option>
+          <option value="Security in Computing">Security in Computing</option>
+          <option value="Business Intelligence">Business Intelligence</option>
+          <option value="Principles of Geographic Information Systems">Principles of Geographic Information Systems</option>
+          <option value="Enterprise Networking">Enterprise Networking</option>
+          <option value="IT Service Management Cyber Laws">IT Service Management Cyber Laws</option>
+
+
+
+          <option value="Computer Organization and Design">Computer Organization and Design</option>
+          <option value="Programming with Python 1 ">Programming with Python 1 </option>
+          <option value="Free and Open Source Software">Free and Open Source Software</option>
+          <option value="Database Systems">Database Systems</option>
+          <option value="Discrete Mathematics">Discrete Mathematics</option>
+          <option value="Descriptive Statistics and Introduction to Probability">Descriptive Statistics and Introduction to Probability</option>
+          <option value="Soft Skills Development">Soft Skills Development</option>
+          <option value="Programming with C">Programming with C</option>
+          <option value="Programming with Python 2"></option>
+          <option value="Linux"></option>
+          <option value="Data Structures"></option>
+          <option value="Calculus">Calculus</option>
+          <option value="Statistical Methods and Testing of Hypothesis">Statistical Methods and Testing of Hypothesis</option>
+          <option value="Green Technologies">Green Technologies</option>
+          <option value="Combinatorics and Graph Theory">Combinatorics and Graph Theory</option>
+          <option value="Core Java">Core Java</option>
+          <option value="Database Management Systems">Database Management Systems</option>
+          <option value="Physical Computing and IoT Programming">Physical Computing and IoT Programming</option>
+          <option value="Theory of Computation">Theory of Computation</option>
+          <option value="Web Programming">Web Programming</option>
+          <option value="Operating Systems">Operating Systems</option>
+          <option value="Operating System and Linux">Operating System and Linux</option>
+          <option value="Web Technologies">Web Technologies</option>
+          <option value="Android Developer Fundamentals">Android Developer Fundamentals</option>
+          <option value="Advanced JAVA">Advanced JAVA</option>
+          <option value="Fundamentals of Algorithms">Fundamentals of Algorithms</option>
+          <option value="Linear Algebra using Python">Linear Algebra using Python</option>
+          <option value="Software Engineering"></option>
+          <option value="Dot Net Technologies"></option>
+          <option value="Data Communication and Networking"></option>
+          <option value="Mobile Application Development"></option>
+
+
+
+        <option value="Architecting of IoT"></option>
+        <option value="Game Programming"></option>
+        <option value="Cyber Forensics"></option>
+        <option value="Linux Server Administration"></option>
+        <option value="Software Testing and Quality Assurance"></option>
+        <option value="Information and Network Security"></option>
+        <option value="Web Services"></option>
+        <option value="Advanced Networking and Security"></option>
+        <option value="Software Engineering and Testing"></option>
+        <option value="Ethical Hacking"></option>
+        <option value="Wireless Sensor Networks and Mobile Communication"></option>
+        <option value="Cloud Computing"></option>
+        <option value="Data Science"></option>
+        <option value="Digital Image Processing"></option>
+
                 </datalist>
                 <input type="text" placeholder="Full Name" name="Name">
                 <input type="text" placeholder="Roll Number" name="Roll">
@@ -115,5 +209,6 @@
                 <a href="{{url_for('static', filename='CreateAccount.html')}}"><small>Create account</small></a>
             </div>
         </form>
+        <small class="small">A Siddhant shah productions<br>Done is better than perfect</small>
     </body>
 </html>
