--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,11 @@
             margin-top:41%;
             font-family: sans-serif;
         }
+        @media only screen and (max-width: 1026px) {
+        .small {
+        display: none;
+    }
+}
         </style>
     </head>
     <body>
