--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
                 background-color:navy;
                 color:white;
                 font-family:sans-serif;
-                width:150%;
+                width:101.6%;
                 height:75px;
             }
             div{
@@ -73,11 +73,16 @@
             text-decoration:underline;
         }
         .small{
-            display: block;
-            margin-right:25px;
-            font-size:8px;
+            position:fixed;
+            margin-left:-0.6%;
+            font-size:10px;
+            width:100%;
+            height:90px;
+            background-color:navy;
+            color:white;
+            margin-top:42%;
+            padding-top:0.3%;
             text-align:center;
-            margin-top:41%;
             font-family: sans-serif;
         }
         #error{
@@ -85,7 +90,7 @@
             color:red;
             font-family: sans-serif;
             position:absolute;
-            margin-top:22%;
+            margin-top:20%;
             margin-left:11%;
         }
         @media only screen and (max-width: 1026px) {
@@ -118,72 +123,72 @@
                     <option value="5">5</option>
                     <option value="6">6</option>
                 </select>
-                <input type="text" style="margin-left:27.3%;overflow: scroll;" list="Subject" name="Subject" placeholder="Subject"><br>
+                <input type="text" autocomplete="off" style="margin-left:27.3%;overflow: scroll;" list="Subject" name="Subject" placeholder="Subject"><br>
                 <datalist id="Subject"style="overflow: scroll;">
                     <option display:none value="" disabled selected hidden><p>Subject</p></option>
 
-          <option value="imperative Programming">Imperative Programming</option>
-          <option value="digital Electronics">Digital Electronics</option>
-          <option value="operating Systems">Operating Systems</option>
-          <option value="discrete Mathematics">Discrete Mathematics</option>
-          <option value="communication Skills">Communication Skills</option>
-          <option value="object oriented Programming">Object oriented Programming</option>
-          <option value="microprocessor Architecture">Microprocessor Architecture</option>
-          <option value="web Programming">Web Programming</option>
-          <option value="numerical and Statistical Methods">Numerical and Statistical Methods</option>
-          <option value="green Computing">Green Computing</option>
-          <option value="python Programming">Python Programming</option>
-          <option value="data Structures">Data Structures</option>
-          <option value="computer Networks">Computer Networks</option>
-          <option value="database Management Systems">Database Management Systems</option>
-          <option value="applied Mathematics">Applied Mathematics</option>
-          <option value="core Java">Core Java</option>
-          <option value="introduction to Embedded Systems">Introduction to Embedded Systems</option>
-          <option value="computer Oriented Statistical Techniques">Computer Oriented Statistical Techniques</option>
-          <option value="software Engineering">Software Engineering</option>
-          <option value="computer Graphics and Animation">Computer Graphics and Animation</option>
-          <option value="software Project Management">Software Project Management</option>
-          <option value="Internet of Things">Internet of Things</option>
-          <option value="Advanced Web Programming">Advanced Web Programming</option>
-          <option value="Artificial Intelligence">Artificial Intelligence</option>
-          <option value="Linux System Administration">Linux System Administration</option>
-          <option value="Enterprise Java Next Generation Technologies">Enterprise Java Next Generation Technologies</option>
-          <option value="Software Quality Assurance">Software Quality Assurance</option>
-          <option value="Security in Computing">Security in Computing</option>
-          <option value="Business Intelligence">Business Intelligence</option>
-          <option value="Principles of Geographic Information Systems">Principles of Geographic Information Systems</option>
-          <option value="Enterprise Networking">Enterprise Networking</option>
-          <option value="IT Service Management Cyber Laws">IT Service Management Cyber Laws</option>
+          <option value="imperative Programming"></option>
+          <option value="digital Electronics"></option>
+          <option value="operating Systems"></option>
+          <option value="discrete Mathematics"></option>
+          <option value="communication Skills"></option>
+          <option value="object oriented Programming"></option>
+          <option value="microprocessor Architecture"></option>
+          <option value="web Programming"></option>
+          <option value="numerical and Statistical Methods"></option>
+          <option value="green Computing"></option>
+          <option value="python Programming"></option>
+          <option value="data Structures"></option>
+          <option value="computer Networks"></option>
+          <option value="database Management Systems"></option>
+          <option value="applied Mathematics"></option>
+          <option value="core Java"></option>
+          <option value="introduction to Embedded Systems"></option>
+          <option value="computer Oriented Statistical Techniques"></option>
+          <option value="software Engineering"></option>
+          <option value="computer Graphics and Animation"></option>
+          <option value="software Project Management"></option>
+          <option value="Internet of Things"></option>
+          <option value="Advanced Web Programming"></option>
+          <option value="Artificial Intelligence"></option>
+          <option value="Linux System Administration"></option>
+          <option value="Enterprise Java Next Generation Technologies"></option>
+          <option value="Software Quality Assurance"></option>
+          <option value="Security in Computing"></option>
+          <option value="Business Intelligence"></option>
+          <option value="Principles of Geographic Information Systems"></option>
+          <option value="Enterprise Networking"></option>
+          <option value="IT Service Management Cyber Laws"></option>
 
 
 
-          <option value="Computer Organization and Design">Computer Organization and Design</option>
-          <option value="Programming with Python 1 ">Programming with Python 1 </option>
-          <option value="Free and Open Source Software">Free and Open Source Software</option>
-          <option value="Database Systems">Database Systems</option>
-          <option value="Discrete Mathematics">Discrete Mathematics</option>
-          <option value="Descriptive Statistics and Introduction to Probability">Descriptive Statistics and Introduction to Probability</option>
-          <option value="Soft Skills Development">Soft Skills Development</option>
-          <option value="Programming with C">Programming with C</option>
+          <option value="Computer Organization and Design"></option>
+          <option value="Programming with Python 1 "></option>
+          <option value="Free and Open Source Software"></option>
+          <option value="Database Systems"></option>
+          <option value="Discrete Mathematics"></option>
+          <option value="Descriptive Statistics and Introduction to Probability"></option>
+          <option value="Soft Skills Development"></option>
+          <option value="Programming with C"></option>
           <option value="Programming with Python 2"></option>
           <option value="Linux"></option>
           <option value="Data Structures"></option>
-          <option value="Calculus">Calculus</option>
-          <option value="Statistical Methods and Testing of Hypothesis">Statistical Methods and Testing of Hypothesis</option>
-          <option value="Green Technologies">Green Technologies</option>
-          <option value="Combinatorics and Graph Theory">Combinatorics and Graph Theory</option>
-          <option value="Core Java">Core Java</option>
-          <option value="Database Management Systems">Database Management Systems</option>
-          <option value="Physical Computing and IoT Programming">Physical Computing and IoT Programming</option>
-          <option value="Theory of Computation">Theory of Computation</option>
-          <option value="Web Programming">Web Programming</option>
-          <option value="Operating Systems">Operating Systems</option>
-          <option value="Operating System and Linux">Operating System and Linux</option>
-          <option value="Web Technologies">Web Technologies</option>
-          <option value="Android Developer Fundamentals">Android Developer Fundamentals</option>
-          <option value="Advanced JAVA">Advanced JAVA</option>
-          <option value="Fundamentals of Algorithms">Fundamentals of Algorithms</option>
-          <option value="Linear Algebra using Python">Linear Algebra using Python</option>
+          <option value="Calculus"></option>
+          <option value="Statistical Methods and Testing of Hypothesis"></option>
+          <option value="Green Technologies"></option>
+          <option value="Combinatorics and Graph Theory"></option>
+
+          <option value="Database Management Systems"></option>
+          <option value="Physical Computing and IoT Programming"></option>
+          <option value="Theory of Computation"></option>
+          <option value="Web Programming"></option>
+          <option value="Operating Systems"></option>
+          <option value="Operating System and Linux"></option>
+          <option value="Web Technologies"></option>
+          <option value="Android Developer Fundamentals"></option>
+          <option value="Advanced JAVA"></option>
+          <option value="Fundamentals of Algorithms"></option>
+          <option value="Linear Algebra using Python"></option>
           <option value="Software Engineering"></option>
           <option value="Dot Net Technologies"></option>
           <option value="Data Communication and Networking"></option>
@@ -224,7 +229,7 @@
                 <a href="{{url_for('static', filename='CreateAccount.html')}}"><small>Create account</small></a>
             </div>
         </form>
-        <small class="small">A Siddhant shah productions<br>Done is better than perfect</small>
+        <small class="small"> <span>a Siddhant shah productions<br>ExamSoft</span></div>
 
     </body>
 </html>
