Done every things works just fine

--- a/templates/Paper.html
+++ b/templates/Paper.html
@@ -167,10 +167,10 @@
         <form action="/{{Subject}}/{{Roll}}/Next" method="POST" id="ans">
 
         <div class="body" style="position: relative;">
-            <a href="/{{Subject}}/{{Roll}}/Next"><button type="submit"  value="{{rows[1]}}">{{rows[1]}}</button></a>
-            <a href="/{{Subject}}/{{Roll}}/Next"><button type="submit"  value="{{rows[2]}}">{{rows[2]}}</button><br></a>
-            <a href="/{{Subject}}/{{Roll}}/Next"> <button type="submit" value="{{rows[3]}}">{{rows[3]}}</button></a>
-            <a href="/{{Subject}}/{{Roll}}/Next"><button type="submit"  value="{{rows[4]}}">{{rows[4]}}</button></a>
+            <a href="/{{Subject}}/{{Roll}}/Next"><button type="submit" name="o" value="{{rows[1]}}">{{rows[1]}}</button></a>
+            <a href="/{{Subject}}/{{Roll}}/Next"><button type="submit" name="o" value="{{rows[2]}}">{{rows[2]}}</button><br></a>
+            <a href="/{{Subject}}/{{Roll}}/Next"> <button type="submit" name="o" value="{{rows[3]}}">{{rows[3]}}</button></a>
+            <a href="/{{Subject}}/{{Roll}}/Next"><button type="submit" name="o" value="{{rows[4]}}">{{rows[4]}}</button></a>
         </div>
         </form>
         <footer class="small"> <span style="color:white;">Please select an option</span></footer>
