--- a/templates/index.html
+++ b/templates/index.html
@@ -93,6 +93,17 @@
             margin-top:20%;
             margin-left:11%;
         }
+        #error1{
+            position:absolute;
+            font-size:15px;
+            color:red;
+            font-family: sans-serif;
+            position:absolute;
+            margin-top:2%;
+            margin-left:60%;
+        }
+
+        }
         @media only screen and (max-width: 1026px) {
         .small {
         display: none;
@@ -106,6 +117,7 @@
         <header class="top">
              <span style="position:relative;top:10px;left:10px"><b>ExamSoft</b><prep>&nbsp;&nbsp; Rizvi College</span>
         </header>
+        <p id="error1">{% block p1 %} {% endblock %}</p>
         <form id="Students" action="/StudentZone" method="POST" name="Student">
             <div style="margin-left:50%">
                 <span style="position:;">Students zone</span>
@@ -126,91 +138,9 @@
                 <input type="text" autocomplete="off" style="margin-left:27.3%;overflow: scroll;" list="Subject" name="Subject" placeholder="Subject"><br>
                 <datalist id="Subject"style="overflow: scroll;">
                     <option display:none value="" disabled selected hidden><p>Subject</p></option>
-
-          <option value="imperative Programming"></option>
-          <option value="digital Electronics"></option>
-          <option value="operating Systems"></option>
-          <option value="discrete Mathematics"></option>
-          <option value="communication Skills"></option>
-          <option value="object oriented Programming"></option>
-          <option value="microprocessor Architecture"></option>
-          <option value="web Programming"></option>
-          <option value="numerical and Statistical Methods"></option>
-          <option value="green Computing"></option>
-          <option value="python Programming"></option>
-          <option value="data Structures"></option>
-          <option value="computer Networks"></option>
-          <option value="database Management Systems"></option>
-          <option value="applied Mathematics"></option>
-          <option value="core Java"></option>
-          <option value="introduction to Embedded Systems"></option>
-          <option value="computer Oriented Statistical Techniques"></option>
-          <option value="software Engineering"></option>
-          <option value="computer Graphics and Animation"></option>
-          <option value="software Project Management"></option>
-          <option value="Internet of Things"></option>
-          <option value="Advanced Web Programming"></option>
-          <option value="Artificial Intelligence"></option>
-          <option value="Linux System Administration"></option>
-          <option value="Enterprise Java Next Generation Technologies"></option>
-          <option value="Software Quality Assurance"></option>
-          <option value="Security in Computing"></option>
-          <option value="Business Intelligence"></option>
-          <option value="Principles of Geographic Information Systems"></option>
-          <option value="Enterprise Networking"></option>
-          <option value="IT Service Management Cyber Laws"></option>
-
-
-
-          <option value="Computer Organization and Design"></option>
-          <option value="Programming with Python 1 "></option>
-          <option value="Free and Open Source Software"></option>
-          <option value="Database Systems"></option>
-          <option value="Discrete Mathematics"></option>
-          <option value="Descriptive Statistics and Introduction to Probability"></option>
-          <option value="Soft Skills Development"></option>
-          <option value="Programming with C"></option>
-          <option value="Programming with Python 2"></option>
-          <option value="Linux"></option>
-          <option value="Data Structures"></option>
-          <option value="Calculus"></option>
-          <option value="Statistical Methods and Testing of Hypothesis"></option>
-          <option value="Green Technologies"></option>
-          <option value="Combinatorics and Graph Theory"></option>
-
-          <option value="Database Management Systems"></option>
-          <option value="Physical Computing and IoT Programming"></option>
-          <option value="Theory of Computation"></option>
-          <option value="Web Programming"></option>
-          <option value="Operating Systems"></option>
-          <option value="Operating System and Linux"></option>
-          <option value="Web Technologies"></option>
-          <option value="Android Developer Fundamentals"></option>
-          <option value="Advanced JAVA"></option>
-          <option value="Fundamentals of Algorithms"></option>
-          <option value="Linear Algebra using Python"></option>
-          <option value="Software Engineering"></option>
-          <option value="Dot Net Technologies"></option>
-          <option value="Data Communication and Networking"></option>
-          <option value="Mobile Application Development"></option>
-
-
-
-        <option value="Architecting of IoT"></option>
-        <option value="Game Programming"></option>
-        <option value="Cyber Forensics"></option>
-        <option value="Linux Server Administration"></option>
-        <option value="Software Testing and Quality Assurance"></option>
-        <option value="Information and Network Security"></option>
-        <option value="Web Services"></option>
-        <option value="Advanced Networking and Security"></option>
-        <option value="Software Engineering and Testing"></option>
-        <option value="Ethical Hacking"></option>
-        <option value="Wireless Sensor Networks and Mobile Communication"></option>
-        <option value="Cloud Computing"></option>
-        <option value="Data Science"></option>
-        <option value="Digital Image Processing"></option>
-
+                          {% for i in E %}
+                              <option value="{{i[0]}}"></option>
+                          {% endfor %}
                 </datalist>
                 <input type="text" placeholder="Full Name" name="Name">
                 <input type="text" placeholder="Roll Number" name="Roll">
