--- a/templates/Professors.html
+++ b/templates/Professors.html
@@ -99,7 +99,7 @@
                  font-weight: normal;
             }
             #table tr{
-                background-color:blue;
+                background-color: orange;
                 color:white;
                 padding:5%;
                 text-align:center;
@@ -133,7 +133,6 @@
 
                     <td><a  href="/{{Email}}/{{r[2]}}/Deploy"><button type="submit" class="button" style="background-color:red;" value="" id="Active">Activate</button></a></td>
                     <td><a href="/{{r[2]}}/delete"><button type="submit" class="button" style="background-color:red">Delete</button>
-
                     <a href="/{{Email}}/{{r[2]}}/SeeResult"><button type="submit" class="button" style="background-color:#0000CC;"><span>Result </span></button></a></td>
                 </tr>
                 {% endfor %}
