--- a/templates/index.html
+++ b/templates/index.html
@@ -103,12 +103,12 @@
             margin-left:60%;
         }
 
+
+		@media (max-width: 990px) {
+          small {
+              display:none;
+          }
         }
-        @media only screen and (max-width: 1026px) {
-        .small {
-        display: none;
-    }
-}
         </style>
     </head>
     <body style="background-color: #f1f1f1;">
