--- a/templates/question.html
+++ b/templates/question.html
@@ -71,7 +71,7 @@
         </select>
         <br>
 
-        <span>Subject Name</span><input type="text" style="margin-left:29%" list="Subject" name="Subject"><br>
+        <span>Subject Name</span><input type="text" autocomplete="off" style="margin-left:29%" list="Subject" name="Subject"><br>
         <datalist id="Subject">
 
           <option value="imperative Programming"></option>
