--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@
                 <input type="text" placeholder="Email address" name="Email">
                 <input type="password" placeholder="Password" name="Password">
                 <button type="submit">Login</button>
-                <a href="{{url_for('static', filename='CreateAccount.html')}}"><small>Create account</small></a>
+                <a href="/CreateAccount"><small>Create account</small></a>
             </div>
         </form>
         <small class="small"> <span>a Siddhant shah productions<br>ExamSoft</span></div>
